<resources>
    <string name="app_name">YourCloud</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">YourCloud</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- About -->
    <string name="about_title">About</string>
	<string name="about_body"><![CDATA[
<b>YourCloud</b><br/>
%1$s #%2$s

<br/><br/><b>Author</b><br/>
<a href="https://plus.google.com/u/0/114593566281858770362">Ritchie Huang on Google+</a>

<br/><br/><b>Contact</b><br/>
<a href="https://github.com/RITCHIEHuang">Github Profile</a>

<br/><br/><b>Licence</b><br/>
Copyright © 2017 Ritchie Huang.
<br/><br/>Licensed under the Apache License, Version 2.0 (the "License");
You may not use this file except in compliance with the License.
You may obtain a copy of the License at

<br/><br/><a href="http://www.apache.org/licenses/LICENSE-2.0">http://www.apache.org/licenses/LICENSE-2.0</a>

<br/><br/>Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
<br/>See the License for the specific language governing permissions and
limitations under the License.
]]></string>

    <!-- Action Mode -->
    <string name="action_delete">Delete</string>
    <string name="action_deleted">Deleted</string>
    <string name="action_select_all">Select All</string>
    <string name="action_selected_one">%1$s selected</string>
    <string name="action_selected_many">%1$s selected</string>
    <string name="action_uploaded">Uploaded</string>
    <string name="action_archived">Archived</string>
    <string name="action_merge">Merge</string>
    <string name="action_split">Split</string>
    <string name="undo">\"Undo\"</string>
    <string name="localfiles">LocalFiles</string>
    <string name="cloudfiles">CloudFiles</string>
    <string name="tools">Tools</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="about">About</string>
    <string name="communicate">Communicate</string>
    <string name="no_items">No items</string>
    <string name="uploadfiles">UploadFiles</string>
    <string name="downloadfiles">DownloadFiles</string>
    <string name="yourcloud">YourCloud</string>
</resources>
